--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -22,10 +22,11 @@ Changelog
 [C] = Cosmetical fix (layout, typo etc.)
 [D] = Documentation improvements
 [M] = Maintenance works
-[S] = Security fix (issues that are related to security)
 [O] = Optimization of code
+[S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-04-13 [M] Committing to SVN {GauGau}
 2006-04-10 [O] Replaced count(*) with count(id) in stats query on index page and get_pic_data function in functions.inc.php {Abbas}
 2006-04-10 [M] Removed comments in language file that indicated changes in cpg1.4.x. {GauGau}
 2006-04-10 [B] Re-added config.php and server_relocate.php to overwrite the outdated files when users upgrade. {GauGau}
