--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-04-20 [C] Moved theme and language styling from hardcoded into stylesheet (inline class) {GauGau}
 2006-04-19 [D] Added start/end tokens to the individual sections of the sample theme for easier theming {GauGau}
 2006-04-18 [A] Added API for Coppermine to be used with applications like Koppermine and may be some others {Aditya}
 2006-04-17 [A] Added option to send visitors directly from the thumbnail page to the full-size pop-up {GauGau}
